# simple-ws-proxy

./: ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
packaging/: build.py
simple_ws_proxy/client/: args.py  main.py  tunnel.py
simple_ws_proxy/common/: auth.py  cipher.py  prefork_server.py  socks5.py
simple_ws_proxy/common/messages/: coder.py  connect.py
simple_ws_proxy/server/: args.py  main.py
tests/: test_auth.py  test_cipher.py  test_socks5.py
