[project]
name = "simple-ws-proxy"
version = "0.1.0"
description = "Simple WebSocket proxy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "msgspec>=0.18",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
simple-ws-proxy-server = "simple_ws_proxy.server.main:main"
simple-ws-proxy-client = "simple_ws_proxy.client.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.14"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
